--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.3",
     "highlight.js": "^11.7.0",
     "nprogress": "^0.2.0",
+    "sitemap": "^7.1.1",
     "solid-icons": "^1.0.4",
     "solid-js": "^1.6.9",
     "solid-start": "^0.2.15",
