--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "astro": "^4.4.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
