--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/solid-js": "^4.0.1",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.11",
+    "date-fns": "^3.3.1",
+    "solid-js": "^1.8.15",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "postcss-nesting": "^12.0.4",
     "prettier": "^3.2.5"
   }
 }
