--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@iconify-json/fa6-brands": "^1.1.18",
+    "@iconify-json/mdi": "^1.1.64",
+    "@tailwindcss/typography": "^0.5.10",
+    "astro-icon": "^1.1.0",
     "postcss-nesting": "^12.0.4",
     "prettier": "^3.2.5"
   }
